2018-XX-XX CORE 5.1
  * DAEMON:
   - default nodes are now set in the node map
   - moved ns3 and netns directories to the top of the repo
   - changes to make use of fpm as the tool for building packages
   - removed usage of logzero to avoid dependency issues for built packages
  * TEST:
   - fixed some broken tests
  * BUGFIXES:
   - #142 - duplication of custom services

2017-09-01 CORE 5.0
  * DEVELOPMENT:
    - support for editorconfig to help standardize development across IDEs, from the defined configuration file
    - support for sonarqube analysis, from the defined configuration file
  * DAEMON:
    - code cleanup and improvements to adhere to coding standards (SonarQube)
    - leverage "logzero" module to make easy usage of the standard logging module
    - improvements to documentation across the code base
    - initial work to separate the dependence on TCP API messaging from the core library (easier core scripting)
    - beta support for running core in Open vSwitch mode, leveraging Open vSwitch bridges, instead of Linux bridges
  * SERVICES:
    - added Ryu SDN controller service
    - added Open vSwitch service
  * TEST:
    - added unit/integration tests to support validating changes going forward
  * BUGFIXES:
    - merged pull requests for: #115, #110, #109, #107, #106, #105, #103, #102, #101, #96

2015-06-05 CORE 4.8
  * EMANE:
    - support for EMANE 0.9.2
    - run emane in each container when using EMANE 0.9.2
    - support using separate control networks for EMANE OTA and event traffic
  * GUI:
    - fixed an issue where the adjacency widget lines pointed to old node positions
    - fixed an issue where not all EMANE 0.9.x IEEE 802.11 MAC parameter were configurable
    - fixed an issue related to running python scripts from the GUI when using tcl/tk version 8.6
    - improved batch mode execution to display the check emulation light status
    - improved managing multiple sessions
    - improved support for using multiple canvases