@@ -1,6 +1,0 @@
-"""
-Optional add ons can be put in this directory. Everything listed in __all__ is automatically
-loaded by the main core module.
-"""
-
-__all__ = []
