@@ -61,5 +61,3 @@ emane_models = RfPipe, Ieee80211abg, CommEffect, Bypass, Tdma
 # EMANE log level range [0,4] default: 2
 #emane_log_level = 2
 emane_realtime = True
-
-#aux_request_handler = core.addons.api2handler.CoreApi2RequestHandler:12222
